--- a/dash1/package.json
+++ b/dash1/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^6.1.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
     "run": "^1.5.0"
   },
   "devDependencies": {
